unpackaged/objects/copado__MC_Custom_Job_Step__mdt.object
<CustomObject>
	<description>This is the configuration of the Custom Job Step.</description>
	<fields>
		<fullName>copado__CustomType__c</fullName>
		<description>Type of Custom job step</description>
		<label>Custom Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__LWC_Name__c</fullName>
		<description>Name of LWC/Aura component to render while configuring the Custom Job step</description>
		<label>LWC Name</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Platform__c</fullName>
		<description>Platform Name</description>
		<label>Platform</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>MC Custom Job Step</label>
	<pluralLabel>MC Custom Job Steps</pluralLabel>
</CustomObject>